# knwler

./: .gitignore  CHANGELOG.md  Makefile  README.md  knwler-server.spec  languages.json  llm.py  main.py  package.json  pyproject.toml  pytest.ini  server.py
examples/Deloitte/: Deloitte-Nachhaltigkeitsbericht-Geschäftsjahr-2024_extracted.txt  results.gml  results.html  results.json
examples/EUAI/: EUAI_extracted.txt  results.gml  results.html  results.json
examples/NIST/: results.gml  results.html  results.json
examples/Wetboek/: BurgerlijkBoek5_extracted.txt  results.gml  results.html  results.json
knwler/: llm.py
src/: app.js  index.html  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
templates/: report.html
tests/: test_llm.py
