[project]
name = "fast-graph-extraction"
version = "0.2.0"
description = "Fast and accurate graph extraction from text using LLMs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "tiktoken>=0.12.0",
    "typer>=0.21.1",
    "rich>=14.3.2",
    "networkx>=3.6.1",
    "pymupdf4llm[layout,ocr]>=0.2.9",
    "jinja2>=3.1.6",
]
